add html, css and js from CF repl
https://replit.com/@CFCurriculum/jQuery-to-do-list

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description" content="A simple to-do list app.">
   <!-- <meta property="og:image" content="image.png"> -->
 
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <link rel="stylesheet" href="css/styles.css">
@@ -23,9 +23,21 @@
 </head>
 
 <body>
-  <!-- your content here... -->
+  <div class="container">
+		<h2>To Do List App</h2>
+		<p><em> Double click to mark an item off, click on "X" to delete an item, and drag items to reorder.</em></p>
+
+		<form name="toDoList">
+			<input type="text" name="ListItem" id="input"/>
+		</form>
+
+		<div onclick="newItem()" id="button">Add</div>
+		<br/>
+		<ol id="list"></ol>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
